:tada: 任务和后台系统重置